--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "mongodb": "^5.0.1",
+    "mongoose": "^7.0.0",
     "mysql2": "^3.1.2",
     "pug": "^3.0.2",
     "sequelize": "^6.28.0"
