--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express-validator": "^6.15.0",
     "mongodb": "^5.0.1",
     "mongoose": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
+    "pdfkit": "^0.13.0",
     "pug": "^3.0.2",
     "sequelize": "^6.28.0"
   }
